<?xml version="1.0" encoding="utf-8"?>
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:background="@drawable/button5"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/quiz_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/question1_c1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic"
            android:text="@string/question1_c1" />

        <RadioButton
            android:id="@+id/question1_c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic"
            android:text="@string/question1_c2" />

        <RadioButton
            android:id="@+id/question1_c3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic"
            android:text="@string/question1_c3" />
        <RadioButton
            android:id="@+id/question1_c4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic"
            android:text="@string/question1_c4" />
    </RadioGroup>

    <TextView
        android:id="@+id/question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/question2_answer"
        android:text="@string/question2"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/question2_c1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic"
            android:text="@string/question2_c1" />

        <RadioButton
            android:id="@+id/question2_c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic"
            android:text="@string/question2_c2" />

        <RadioButton
            android:id="@+id/question2_c3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic"
            android:text="@string/question2_c3" />
        <RadioButton
            android:id="@+id/question2_c4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic"
            android:text="@string/question2_c4" />
    </RadioGroup>


    <TextView
        android:id="@+id/question3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question3"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/question3_choice1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"
        android:text="@string/question3_choice1" />

    <CheckBox
        android:id="@+id/question3_choice2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"
        android:text="@string/question3_choice2" />

    <CheckBox
        android:id="@+id/question3_choice3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"
        android:text="@string/question3_choice3" />

    <CheckBox
        android:id="@+id/question3_choice4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"
        android:text="@string/question3_choice4" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:text="NEXT"
            android:layout_below="@+id/radioGroup"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </LinearLayout>
</ScrollView>
