<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/button5"
    android:layout_height="match_parent">

<LinearLayout
    android:id="@+id/quiz_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">



    <TextView
        android:id="@+id/question5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/question5"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"
        android:textSize="18sp" />
    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/question5_choice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic"
            android:text="@string/question5_choice1" />

        <RadioButton
            android:id="@+id/question5_choice2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic"
            android:text="@string/question5_choice2" />

        <RadioButton
            android:id="@+id/question5_choice3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic"
            android:text="@string/question5_choice3" />
        <RadioButton
            android:id="@+id/question5_choice4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic"
            android:text="@string/question5_choice4" />
    </RadioGroup>




    <TextView
        android:id="@+id/q7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/q7"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"

        android:textSize="18sp" />


    <CheckBox
        android:id="@+id/question7_choice1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"
        android:text="@string/question7_choice1" />

    <CheckBox
        android:id="@+id/question7_choice2"
        android:layout_width="wrap_content"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"
        android:layout_height="wrap_content"
        android:text="@string/question7_choice2" />

    <CheckBox
        android:id="@+id/question7_choice3"
        android:layout_width="wrap_content"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"
        android:layout_height="wrap_content"
        android:text="@string/question7_choice3" />

    <CheckBox
        android:id="@+id/question7_choice4"
        android:layout_width="wrap_content"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold|italic"
        android:layout_height="wrap_content"
        android:text="@string/question7_choice4" />
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="NEXT"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</LinearLayout>
</ScrollView>
